[package]
name = "bufferpool"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Consider removing serde for json io
# <= 1.0.171 due to serde-rs/serde#2538
serde = { version = "1", features = ["derive"] }

rand = "0.8.5"
serde_json = "1.0.145"
